[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/textures/bar2_fg.png" type="Texture2D" id=1]
[ext_resource path="res://ui/textures/bar2_bg.png" type="Texture2D" id=2]
[ext_resource path="res://ui/textures/bar2_fill.png" type="Texture2D" id=3]
[ext_resource path="res://hangar/mod_panel.gd" type="Script" id=4]

[node name="ModPanel" type="PanelContainer"]
offset_right = 120.0
offset_bottom = 46.0
script = ExtResource( 4 )

[node name="Content" type="HBoxContainer" parent="."]
offset_left = 7.0
offset_top = 7.0
offset_right = 113.0
offset_bottom = 39.0

[node name="ModStatus" type="TextureProgressBar" parent="Content"]
offset_right = 32.0
offset_bottom = 32.0
custom_minimum_size = Vector2( 32, 32 )
max_value = 1.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_top = 4
stretch_margin_right = 4
stretch_margin_bottom = 4

[node name="ModName" type="Label" parent="Content"]
offset_left = 36.0
offset_top = 9.0
offset_right = 106.0
offset_bottom = 23.0
text = "Mod Name"

[connection signal="gui_input" from="." to="." method="_on_ModPanel_gui_input"]
